# HorizontalsDetektor

./: .gitignore  AIMapsDetektor.sln  README.md
DatasetGenerator/: DatasetGenerator.cs  DatasetGenerator.csproj  Program.cs  Relief.compute  ReliefGenerator.cs  ReliefVisualizer.cs
DatasetGeneratorRust/: Cargo.toml
DatasetGeneratorRust/src/: main.rs
DatasetGeneratorRust/test_dataset/: 0.metadata.json  1.metadata.json  2.metadata.json  3.metadata.json  4.metadata.json  5.metadata.json  6.metadata.json  7.metadata.json  8.metadata.json  9.metadata.json
HeightmapModel/: README.md  dataset.py  generate_dataset.py  model.py  predict.py  requirements.txt  train.py
HeightmapModel/runs/20260309_214338/: args.txt
