[package]
name = "dataset_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
